force-app/main/default/objects/Targeted_School__c/Targeted_School__c.object-meta.xml
<CustomObject>
    <label>Targeted School</label>
    <nameField>
        <label>Targeted School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targeted Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>