force-app/main/default/objects/Targeted_School__c/fields/Is_Target_School_for_Program_s__c.field-meta.xml
<CustomField>
    <fullName>Is_Target_School_for_Program_s__c</fullName>
    <label>Is Target School for Program(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOC Brockton</fullName>
            </value>
            <value>
                <fullName>EOC Boston</fullName>
            </value>
            <value>
                <fullName>TS Brockton</fullName>
            </value>
            <value>
                <fullName>TS Boston</fullName>
            </value>
            <value>
                <fullName>UB Brockton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>