force-app/main/default/objects/Targeted_School__c/fields/NCES_School_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_School_ID__c</fullName>
    <formula>Secondary_School__r.NCES_School_ID__c</formula>
    <label>NCES School ID #</label>
    <type>Text</type>
</CustomField>