force-app/main/default/objects/Targeted_School__c/fields/Report_Support_2__c.field-meta.xml
<CustomField>
    <fullName>Report_Support_2__c</fullName>
    <label>Report Support 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>