force-app/main/default/objects/Targeted_School__c/fields/Secondary_School__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Is Target School</description>
    <label>Secondary School</label>
    <referenceTo>Secondary_School__c</referenceTo>
    <relationshipLabel>Targeted Schools</relationshipLabel>
    <relationshipName>Targeted_Schools</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>