force-app/main/default/objects/Targeted_School__c/fields/Secondary_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_School_Name__c</fullName>
    <formula>Secondary_School__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary School Name</label>
    <type>Text</type>
</CustomField>