force-app/main/default/objects/Targeted_School__c/fields/Service_Year__c.field-meta.xml
<CustomField>
    <fullName>Service_Year__c</fullName>
    <label>Service Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>