force-app/main/default/objects/Targeted_School__c/fields/Supports_Dual_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Supports_Dual_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Dual Enrollment</label>
    <type>Checkbox</type>
</CustomField>