force-app/main/default/objects/Targeted_School__c/fields/Unique_Targeted_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Targeted_School_Name__c</fullName>
    <formula>Secondary_School__r.Name +&#39;(&#39;+TEXT( Service_Year__c )+&#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Targeted School Name</label>
    <type>Text</type>
</CustomField>