force-app/main/default/objects/Targeted_School__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <formula>Secondary_School__r.Zip__c</formula>
    <label>Zip</label>
    <type>Text</type>
</CustomField>