force-app/main/default/objects/Targeted_School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Target_School_for_Program_s__c</columns>
    <columns>Supports_Dual_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>