force-app/main/default/objects/Targeted_School__c/listViews/Target_School_Info.listView-meta.xml
<ListView>
    <fullName>Target_School_Info</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Is_Target_School_for_Program_s__c</columns>
    <columns>NCES_School_ID__c</columns>
    <columns>Secondary_School__c</columns>
    <columns>Secondary_School_Name__c</columns>
    <columns>Service_Year__c</columns>
    <columns>State__c</columns>
    <columns>Supports_Dual_Enrollment__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <label>Target School Info</label>
</ListView>