force-app/main/default/objects/Targeted_School__c/listViews/TS_Brockon_Active_Target_Schools.listView-meta.xml
<ListView>
    <fullName>TS_Brockon_Active_Target_Schools</fullName>
    <columns>NAME</columns>
    <columns>Is_Target_School_for_Program_s__c</columns>
    <columns>NCES_School_ID__c</columns>
    <columns>Secondary_School_Name__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Zip__c</columns>
    <columns>Supports_Dual_Enrollment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Target_School_for_Program_s__c</field>
        <operation>includes</operation>
        <value>TS Brockton</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>TS Brockton Active Target Schools</label>
</ListView>